--- a/blocks/cover/__text_title/cover__text_title.css
+++ b/blocks/cover/__text_title/cover__text_title.css
@@ -6,3 +6,10 @@
     font-size: 72px;
     line-height: 76px;
 }
+
+@media (max-width: 768px) {
+    .cover__text_title {
+        font-size: 10vw;
+        line-height: 10.9375vw;
+    }
+}
