--- a/blocks/footer/__author/footer__author.css
+++ b/blocks/footer/__author/footer__author.css
@@ -1,7 +1,11 @@
 .footer__author {
-    position: absolute;
-    right: 0;
-    margin: 0;
+    margin: 0 0 0 auto;
     font-size: 14px;
     line-height: 16px;
+}
+
+@media (max-width: 670px) {
+    .footer__author {
+        margin: 48px auto 0 0;
+    }
 }
