--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -9,3 +9,15 @@
 .footer__link:last-of-type {
     margin-right: 0;
 }
+
+@media (max-width: 670px) {
+    .footer__link {
+        font-size: 24px;
+        line-height: 24px;
+        margin-top: 32px;
+    }
+
+    .footer__link:first-child {
+        margin-top: 0;
+    }
+}
