--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,7 +1,30 @@
 .footer {
     display: flex;
-    position: relative;
-    margin: 92px auto 24px;
-    width: 100%;
-    max-width: 928px;
+    margin: 92px 0 24px;
+    width: 90.625%;
+    max-width: 1184px;
+}
+
+@media (max-width: 1024px) {
+    .footer {
+        width: 93.75%;
+        max-width: 928px;
+    }
+}
+
+@media (max-width: 768px) {
+    .footer {
+    margin-top: 88px;
+    }
+}
+
+@media (max-width: 670px) {
+    .footer {
+    flex-direction: column;
+    margin-top: 64px;
+    margin-left: 16px;
+    width: 186px;
+    height: 310px;
+    align-self: flex-start;
+    }
 }
