--- a/blocks/header/__link-lang/header__lang-link.css
+++ b/blocks/header/__link-lang/header__lang-link.css
@@ -1,8 +1,18 @@
 .header__lang-link {
   font-size: 24px;
   line-height: 28px;
+  margin: 18px 0 0 18px;
+  margin-top: 18px;
+  margin-left: 18px;
 }
 
 .header__lang-link input[type=radio] {
   display: none;
+}
+
+@media (max-width: 768px) {
+  .header__lang-link {
+    font-size: 18px;
+    line-height: 20px;
+  }
 }
