--- a/blocks/header/__link-lang/header__lang-link_en.css
+++ b/blocks/header/__link-lang/header__lang-link_en.css
@@ -1,7 +1,11 @@
 .header__lang-link_en {
-    position: absolute;
     width: 29px;
     height: 28px;
-    top: 18px;
-    right: 0px;
+}
+
+@media (max-width: 768px) {
+    .header__lang-link_en {
+      width: 22px;
+      height: 20px;
+    }
 }
