--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,8 +1,23 @@
 .header {
     display: flex;
     position: relative;
-    align-self: stretch;
+    justify-content: flex-end;
     width: 100%;
-    margin: 28px auto 0;
     max-width: 1184px;
+    height: 52px;
+    margin-top: 28px;
+    max-width: 1184px;
+}
+
+@media (max-width: 1024px) {
+    .header {
+        width: 93.75%;
+        max-width: 928px;
+    }
+}
+
+@media (max-width: 320px) {
+    .header {
+        height: 42px;
+    }
 }
