--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -4,3 +4,11 @@
     font-size: 54px;
     line-height: 58px;
 }
+
+@media (max-width: 768px) {
+    .intro__title {
+        font-size: 10vw;
+        line-height: 10.9375vw;
+        width: 90%;
+    }
+}
