--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,7 +1,29 @@
 .lead__subtitle {
-    margin: 32px 0 56px;
+    margin: 32px 0 64px;
     max-width: 640px;
     font-size: 30px;
     line-height: 36px;
     text-align: center;
+    width: 90%;
+}
+
+@media (max-width: 1024px) {
+    .lead__subtitle {
+        margin-bottom: 5.46875vw;
+    }
+}
+
+
+@media (min-width: 1170px) {
+    .lead__subtitle {
+        margin-bottom: 64px;
+    }
+}
+
+@media (max-width: 768px) {
+    .lead__subtitle {
+        width: 90vw;	
+        font-size: 5vw;
+        line-height: 4.6875vw;
+    }
 }
