--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -5,4 +5,20 @@
     line-height: 100px;
     text-align: center;
     max-width: 720px;
+    width: 90vw;
+}
+
+@media (max-width: 320px) {
+    .lead__title {
+        font-size: 40px;
+        line-height: 44px;
+    }
+}
+
+@media (max-width: 768px) {
+    .lead__title {
+        font-size: 44px;
+        font-size: 12.5vw;
+        line-height: 13vw;
+    }
 }
