--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -4,5 +4,12 @@
     align-items: center;
     width: 100%;
     max-width: 928px;
-    margin-top: 48px;
+    margin: 48px auto 0;
+}
+
+@media (min-width: 1024px) {
+    .lead {
+        width: 90.625vw;
+        max-width: 984px;
+    }
 }
