--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,10 +1,37 @@
 .photo-grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
     margin-top: 92px;
     gap: 14px;
     width: 100%;
-    max-width: 928px;
-    height: 942px;
+    max-width: 1184px;
+}
+
+@media (max-width: 1024px) {
+    .photo-grid {
+        width: 93.75%;
+        max-width: 928px;
+    }
+}
+
+@media (max-width: 1024px) {
+    .photo-grid {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+    }
+}
+
+@media (max-width: 768px) {
+    .photo-grid {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(6, 1fr);       
+    }
+}
+
+@media (max-width: 320px) {
+    .photo-grid {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(12, 1fr);       
+    }
 }
