--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -2,8 +2,30 @@
     background-position: center;
     background-size: cover;
     margin: 0;
-    width: 440px;
-    height: 440px;
+    width: 460px;
+    height: 460px;
+
+}
+
+@media (max-width: 1024px) {
+    .place__image {
+        width: 440px;
+        height: 440px;
+    }
+}
+
+@media (max-width: 768px) {
+    .place__image {
+        width: 340px;
+        height: 340px;
+    }
+}
+
+@media (max-width: 630px) {
+    .place__image {
+        width: 90vw;
+        height: 90vw;
+    }
 }
 
 .place:nth-child(1) .place__image {
