--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -4,3 +4,19 @@
     line-height: 76px;
     margin: 0;
 }
+
+@media (max-width: 768px) {
+    .place__title {
+        font-size: 44px;
+        line-height: 46px;
+    }
+}
+
+@media (max-width: 630px) {
+    .place__title {
+        margin: 0 auto;
+        font-weight: 900;
+        font-size: 10vw;
+        line-height: 10.9375vw;
+    }
+}
