--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,12 +1,41 @@
 .place {
     display: grid;
-    grid-template-columns: 440px 1fr;
+    grid-template-columns: 460px 1fr;
     grid-template-rows: 1fr max-content;
-    column-gap: 32px;
+    column-gap: 40px;
     row-gap: 48px;
     margin-top: 80px;
 }
 
 .place:first-child {
     margin-top: 0;
+}
+
+@media (max-width: 768px) {
+    .place {
+        margin-top: 73px;
+        
+    }
+}
+
+@media (max-width: 1024px) {
+    .place {
+        grid-template-columns: 440px 1fr;
+        column-gap: 32px;
+    }
+}
+
+@media (max-width: 768px) {
+    .place {
+    grid-template-columns: 340px 1fr;
+    column-gap: 28px;
+    }
+}
+
+@media (max-width: 630px) {
+    .place {
+    grid-template-columns: 90vw;
+    row-gap: 28px;
+
+    }
 }
