--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -2,6 +2,25 @@
     display: flex;
     flex-direction: column;
     margin-top: 92px;
-    width: 100%;
-    max-width: 928px;
+    width: 90.625%;
+    max-width: 984px;
+}
+
+@media (max-width: 1024px) {
+    .places {
+        width: 93.75%;
+        max-width: 928px;
+    }
+}
+
+@media (max-width: 768px) {
+    .places {
+        margin-top: 88px;
+    }
+}
+
+@media (max-width: 630px) {
+    .places {
+        align-items: center;
+    }
 }
