--- a/blocks/header/__link-lang/header__lang-link.css
+++ b/blocks/header/__link-lang/header__lang-link.css
@@ -1,18 +1,18 @@
 .header__lang-link {
+  display: block;
   font-size: 24px;
   line-height: 28px;
-  margin: 18px 0 0 18px;
-  margin-top: 18px;
-  margin-left: 18px;
+  margin: 18px 18px 0 0;
 }
 
-.header__lang-link input[type=radio] {
-  display: none;
+.header__lang-link:last-child {
+  margin-right: 0;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .header__lang-link {
     font-size: 18px;
     line-height: 20px;
+    margin-top: 14px;
   }
 }
