--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,22 +1,31 @@
 .header {
     display: flex;
-    position: relative;
-    justify-content: flex-end;
-    width: 100%;
-    max-width: 1184px;
-    height: 52px;
     margin-top: 28px;
 }
 
-@media (max-width: 1024px) {
+@media (min-width: 1024px) {
     .header {
-        width: 93.75%;
-        max-width: 928px;
+        width: 90.625vw;
+        max-width: 1184px;
     }
 }
 
-@media (max-width: 320px) {
+@media (max-width: 1024px) and (min-width: 768px) {
     .header {
-        height: 42px;
+        width: 90.625vw;
+        min-width: 720px;
+    }
+}
+
+@media (max-width: 768px) and (min-width: 320px) {
+    .header {
+        width: 93.75vw;
+        min-width: 288px;
+    }
+}
+
+@media (max-width: 448px)  {
+    .header {
+        width: 90vw;
     }
 }
