--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -8,6 +8,40 @@
     width: 90vw;
 }
 
+@media (min-width: 1024px) {
+    .lead__title {
+        width: 90.625vw;
+        max-width: 720px;
+    }
+}
+
+@media (max-width: 1024px) and (min-width: 768px) {
+    .lead__title {
+        width: 90.625vw;
+        min-width: 720px;
+    }
+}
+
+@media (max-width: 768px) and (min-width: 320px) {
+    .lead__title {
+        width: 93.75vw;
+        min-width: 288px;
+        font-size: 44px;
+        font-size: 12.5vw;
+        line-height: 13vw;
+    }
+}
+
+@media (max-width: 448px)  {
+    .lead__title {
+        width: 90vw;
+        font-size: 40px;
+        line-height: 44px;
+    }
+}
+
+
+/*
 @media (max-width: 320px) {
     .lead__title {
         font-size: 40px;
