--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,4 +1,4 @@
-.page {
+/*page {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -11,4 +11,11 @@
   .page {
     padding: 0;
   }
+}
+*/
+
+.page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
