--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -8,30 +8,35 @@
     max-width: 1184px;
 }
 
-@media (max-width: 1024px) {
+@media (min-width: 1024px) {
     .photo-grid {
-        width: 93.75%;
-        max-width: 928px;
+        width: 90.625vw;
+        max-width: 1184px;
     }
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1024px) and (min-width: 768px) {
     .photo-grid {
+        width: 90.625vw;
+        min-width: 720px;
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(4, 1fr);
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 768px) and (min-width: 320px) {
     .photo-grid {
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(6, 1fr);       
+        width: 93.75vw;
+        min-width: 288px;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(6, 1fr);     
     }
 }
 
-@media (max-width: 320px) {
+@media (max-width: 448px)  {
     .photo-grid {
-    grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(12, 1fr);       
+        width: 90vw;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(12, 1fr);      
     }
 }
