--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,21 +1,37 @@
 .places {
     display: flex;
     flex-direction: column;
+    align-items: center;
     margin-top: 92px;
     width: 90.625%;
     max-width: 984px;
 }
 
-@media (max-width: 1024px) {
+@media (min-width: 1024px) {
     .places {
-        width: 93.75%;
-        max-width: 928px;
+        width: 90.625vw;
+        max-width: 984px;
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1024px) and (min-width: 768px) {
     .places {
+        width: 90.625vw;
+        min-width: 720px;
+    }
+}
+
+@media (max-width: 768px) and (min-width: 320px) {
+    .places {
+        width: 93.75vw;
+        min-width: 288px;
         margin-top: 88px;
+    }
+}
+
+@media (max-width: 448px)  {
+    .places {
+        width: 90vw;
     }
 }
 
