--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -6,3 +6,9 @@
     font-weight: bold;
     list-style-type: none;
 }
+
+@media (max-width: 448px)  {
+    .intro__list {
+        margin-top: 34px;
+    }
+}
