--- a/blocks/cover/__text-title/cover__text-title.css
+++ b/blocks/cover/__text-title/cover__text-title.css
@@ -9,7 +9,15 @@
 
 @media (max-width: 768px) {
     .cover__text-title {
-        font-size: 10vw;
-        line-height: 10.9375vw;
+        font-size: 72px;
+        line-height: 76px;
+    }
+}
+
+
+@media (max-width: 630px) {
+    .cover__text-title {
+        font-size: 32px;
+        line-height: 35px;
     }
 }
