--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -8,3 +8,15 @@
         max-width: 690px;
     }
 }
+
+@media (max-width: 1024px) {
+    .intro {
+        margin-top: 88px;
+    }
+}
+
+@media (max-width: 448px)  {
+    .intro {
+        margin-top: 64px;
+    }
+}
