--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -8,10 +8,11 @@
     max-width: 1184px;
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
     .photo-grid {
         width: 90.625vw;
         max-width: 1184px;
+        gap: 16px;
     }
 }
 
@@ -21,6 +22,8 @@
         min-width: 720px;
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(4, 1fr);
+        margin-top: 88px;
+        gap: 16px;
     }
 }
 
@@ -36,6 +39,8 @@
 @media (max-width: 448px)  {
     .photo-grid {
         width: 90vw;
+        margin-top: 64px;
+        gap: 12px;
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(12, 1fr);      
     }
