--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -18,6 +18,7 @@
     .places {
         width: 90.625vw;
         min-width: 720px;
+        margin-top: 88px;
     }
 }
 
@@ -32,6 +33,7 @@
 @media (max-width: 448px)  {
     .places {
         width: 90vw;
+        margin-top: 64px;
     }
 }
 
