--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,76 +1,5 @@
 .photo-grid__item {
     margin: 0;
-    padding-bottom: 75%;
-}
-
-.photo-grid__item:nth-child(1) {
-    background-image: url(../../../images/photo-grid/photo-grid-train.jpg);
-    background-position: center;
-    background-size: cover;
-}
-
-.photo-grid__item:nth-child(2) {
-    background-image: url(../../../images/photo-grid/photo-grid-atharva-tulsi.jpg);
-    background-position: center;
-    background-size: cover;
-}
-
-.photo-grid__item:nth-child(3) {
-    background-image: url(../../../images/photo-grid/photo-grid-tuman.jpg);
-    background-position: center;
-    background-size: cover;
-}
-
-.photo-grid__item:nth-child(4) {
-    background-image: url(../../../images/photo-grid/photo-grid-sochi.jpg);
-    background-position: center;
-    background-size: cover;
-}
-
-.photo-grid__item:nth-child(5) {
-    background-image: url(../../../images/photo-grid/photo-grid-arisa.jpg);
-    background-position: center;
-    background-size: cover;
-}
-
-.photo-grid__item:nth-child(6) {
-    background-image: url(../../../images/photo-grid/photo-grid-baikal.jpg);
-    background-position: center;
-    background-size: cover;
-}
-
-.photo-grid__item:nth-child(7) {
-    background-image: url(../../../images/photo-grid/photo-grid-elbrus.jpg);
-    background-position: center;
-    background-size: cover;
-}
-
-.photo-grid__item:nth-child(8) {
-    background-image: url(../../../images/photo-grid/photo-grid-kondratiev.jpg);
-    background-position: center;
-    background-size: cover;
-}
-
-.photo-grid__item:nth-child(9) {
-    background-image: url(../../../images/photo-grid/photo-grid-kamchatka-1.jpg);
-    background-position: center;
-    background-size: cover;
-}
-
-.photo-grid__item:nth-child(10) {
-    background-image: url(../../../images/photo-grid/photo-grid-kamchatka-2.jpg);
-    background-position: center;
-    background-size: cover;
-}
-
-.photo-grid__item:nth-child(11) {
-    background-image: url(../../../images/photo-grid/photo-grid-baikal-2.jpg);
-    background-position: center;
-    background-size: cover;
-}
-
-.photo-grid__item:nth-child(12) {
-    background-image: url(../../../images/photo-grid/photo-grid-ergaki.jpg);
-    background-position: center;
-    background-size: cover;
+    width: 100%;
+    object-fit: cover;
 }
