--- a/blocks/cover/__text-title/cover__text-title.css
+++ b/blocks/cover/__text-title/cover__text-title.css
@@ -5,15 +5,8 @@
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
+    opacity: 1;
 }
-
-@media (max-width: 768px) {
-    .cover__text-title {
-        font-size: 72px;
-        line-height: 76px;
-    }
-}
-
 
 @media (max-width: 630px) {
     .cover__text-title {
