--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,15 +1,9 @@
 .footer {
     display: flex;
-    margin: 92px 0 24px;
+    margin: 92px auto 24px;
     width: 90.625%;
     max-width: 1184px;
-}
-
-@media (min-width: 1024px) {
-    .footer {
-        width: 90.625vw;
-        max-width: 1184px;
-    }
+    color: #fff;
 }
 
 @media (max-width: 1024px) and (min-width: 768px) {
@@ -29,11 +23,10 @@
 
 @media (max-width: 670px) {
     .footer {
-    flex-direction: column;
-    margin-top: 64px;
-    margin-left: 16px;
-    width: 186px;
-    height: 310px;
-    align-self: flex-start;
+        flex-direction: column;
+        margin-top: 64px;
+        margin-left: 16px;
+        width: 186px;
+        align-self: flex-start;
     }
 }
