--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -3,6 +3,8 @@
   font-size: 24px;
   line-height: 28px;
   margin: 18px 18px 0 0;
+  text-decoration: none;
+  color: #fff;
 }
 
 .header__lang-link:last-child {
