--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -7,8 +7,13 @@
 
 @media (max-width: 768px) {
     .intro__title {
-        font-size: 10vw;
-        line-height: 10.9375vw;
         width: 90%;
+    }
+}
+
+@media (max-width: 448px) {
+    .intro__title {
+        font-size: 32px;
+        line-height: 35px;
     }
 }
