--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -3,15 +3,34 @@
     margin-top: 92px;
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1160px) {
     .intro {
-        max-width: 690px;
+        margin-left: 11.5625vw;
+        margin-right: auto;
     }
 }
 
-@media (max-width: 1024px) {
+@media (min-width: 850px) and (max-width: 1160px) {
+    .intro {
+        max-width: 690px;
+        margin-left: 4.6875vw;
+        margin-right: auto;
+    }
+}
+
+@media (max-width: 850px) {
     .intro {
         margin-top: 88px;
+        margin-left: 3.125vw;
+        margin-right: auto;
+    }
+}
+
+@media (max-width: 630px) {
+    .intro {
+        width: 90vw;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
 
