--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -5,34 +5,24 @@
     line-height: 100px;
     text-align: center;
     max-width: 720px;
-    width: 90vw;
+    width: 90.625vw;
 }
 
-@media (min-width: 1024px) {
-    .lead__title {
-        width: 90.625vw;
-        max-width: 720px;
-    }
-}
-
-@media (max-width: 1024px) and (min-width: 768px) {
-    .lead__title {
-        width: 90.625vw;
-        min-width: 720px;
-    }
-}
-
-@media (max-width: 768px) and (min-width: 320px) {
+@media (max-width: 768px) and (min-width: 495px) {
     .lead__title {
         width: 93.75vw;
         min-width: 288px;
-        font-size: 44px;
-        font-size: 12.5vw;
-        line-height: 13vw;
     }
 }
 
-@media (max-width: 448px)  {
+@media (max-width: 730px) and (min-width: 495px) {
+    .lead__title {
+        font-size: 65px;
+        line-height: 73px;
+    }
+}
+
+@media (max-width: 495px)  {
     .lead__title {
         width: 90vw;
         font-size: 40px;
