--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,49 +1,4 @@
 .place__image {
-    background-position: center;
-    background-size: cover;
-    margin: 0;
-    width: 460px;
-    height: 460px;
-
-}
-
-@media (max-width: 1024px) {
-    .place__image {
-        width: 440px;
-        height: 440px;
-    }
-}
-
-@media (max-width: 768px) {
-    .place__image {
-        width: 340px;
-        height: 340px;
-    }
-}
-
-@media (max-width: 630px) {
-    .place__image {
-        width: 90vw;
-        height: 90vw;
-    }
-}
-
-.place:nth-child(1) .place__image {
-    background-image: url(../../../images/place/place-kosa.jpg);
-}
-
-.place:nth-child(2) .place__image {
-    background-image: url(../../../images/place/place-kolsky.jpg);
-}
-
-.place:nth-child(3) .place__image {
-    background-image: url(../../../images/place/place-altai.jpg);
-}
-
-.place:nth-child(4) .place__image {
-    background-image: url(../../../images/place/place-winter-baikal.jpg);
-}
-
-.place:nth-child(5) .place__image {
-    background-image: url(../../../images/place/place-karelia.jpg);
+    width: 100%;
+    object-fit: cover;
 }
