--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -4,7 +4,13 @@
     margin: 0;
 }
 
-/*В разных контрольных точках разница в 1px, не знаю надо ли было вообще это делать или нет, но сделал*/
+@media (max-width: 630px) {
+    .place__paragraph {
+        width: 90vw;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
 
 @media (max-width: 768px) {
     .place__paragraph {
@@ -16,20 +22,6 @@
     .place__paragraph:nth-child(2) {
         margin-top: 26px;
     }
-    /*В задании в этом гриде отступ именно 27px, иначе я бы этим не занимался:)*/
-    .place:nth-child(3) .place__paragraph:nth-child(2) {
-        margin-top: 27px;
-    }
-}
-
-@media (max-width: 1024px) and (min-width: 857px) {
-    .place:nth-child(odd) .place__paragraph:nth-child(2) {
-        margin-top: 27px;
-    }
-    
-    .place:nth-child(even) .place__paragraph:nth-child(2) {
-        margin-top: 26px;
-    }
 }
 
 @media (max-width: 857px) {
@@ -37,4 +29,3 @@
         margin-top: 25px;
     }
 }
-
