--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -5,9 +5,9 @@
     margin: 0;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 858px) {
     .place__title {
-        font-size: 44px;
+        font-size: 42px;
         line-height: 46px;
     }
 }
@@ -15,7 +15,10 @@
 @media (max-width: 630px) {
     .place__title {
         font-weight: 900;
-        font-size: 10vw;
-        line-height: 10.9375vw;
+        font-size: 32px;
+        line-height: 35px;
+        width: 90vw;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
