--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -3,3 +3,12 @@
     flex-direction: column;
     justify-content: flex-end;
 }
+
+
+@media (max-width: 630px) {
+    .place__website {
+        width: 90vw;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
