--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,6 +1,6 @@
 .place {
     display: grid;
-    grid-template-columns: 460px 1fr;
+    grid-template-columns: 35.9375vw 1fr;
     grid-template-rows: 1fr max-content;
     column-gap: 40px;
     row-gap: 48px;
@@ -11,30 +11,26 @@
     margin-top: 0;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1160px) and (min-width: 900px) {
+    .place {
+        grid-template-columns: 42.96875vw 1fr;
+        column-gap: 32px;
+    }
+}
+
+@media (min-width: 630px) and (max-width: 900px) {
     .place {
         margin-top: 73px;
-    }
-}
-
-@media (max-width: 1024px) {
-    .place {
-        grid-template-columns: 440px 1fr;
+        grid-template-columns: 44.271vw 1fr;
         column-gap: 28px;
-    }
-}
-
-@media (max-width: 768px) {
-    .place {
-    grid-template-columns: 340px 1fr;
-    column-gap: 28px;
     }
 }
 
 @media (max-width: 630px) {
     .place {
-    grid-template-columns: 90vw;
-    row-gap: 28px;
+        grid-template-columns: 100%;
+        row-gap: 28px;
+        width: 100%;
     }
 }
 
