--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -7,16 +7,8 @@
     max-width: 984px;
 }
 
-@media (min-width: 1024px) {
-    .places {
-        width: 90.625vw;
-        max-width: 984px;
-    }
-}
-
 @media (max-width: 1024px) and (min-width: 768px) {
     .places {
-        width: 90.625vw;
         min-width: 720px;
         margin-top: 88px;
     }
@@ -40,5 +32,6 @@
 @media (max-width: 630px) {
     .places {
         align-items: center;
+        width: 100%;
     }
 }
