--- a/pages/index.css
+++ b/pages/index.css
@@ -6,13 +6,9 @@
 
 @import url(../vendor/normalize.css);
 
-/*Импорт главного класса*/
+/*Импорт блока root*/
 
-@import url(../blocks/main-class/main-class.css);
-
-/*Импорт блока page*/
-
-@import url(../blocks/page/page.css);
+@import url(../blocks/root/root.css);
 
 /*Импорт блока header*/
 
@@ -20,13 +16,13 @@
 
 @import url(../blocks/header/__image/header__image.css);
 
-@import url(../blocks/header/__link-lang/header__lang-link.css);
+@import url(../blocks/header/__lang-link/header__lang-link.css);
 
-@import url(../blocks/header/__link-lang/__lang/header__lang-link__lang.css);
+@import url(../blocks/header/__lang-link/_active/header__lang-link_active.css);
 
-@import url(../blocks/header/__link-lang/__lang/header__lang-link__lang_underline.css);
+/*Импорт блока content*/
 
-@import url(../blocks/header/__link-lang/header__lang-link_underline.css);
+@import url(../blocks/content/content.css);
 
 /*Импорт блока lead*/
 
@@ -53,6 +49,8 @@
 @import url(../blocks/intro/__text/intro__text.css);
 
 @import url(../blocks/intro/__title/intro__title.css);
+
+@import url(../blocks/intro/__digit/intro__digit.css);
 
 /*Импорт блока photo-grid*/
 
@@ -82,11 +80,8 @@
 
 @import url(../blocks/cover/cover.css);
 
-@import url(../blocks/cover/__background/cover__background.css);
-
 @import url(../blocks/cover/__link/cover__link.css);
 
-@import url(../blocks/cover/__overlay/cover__overlay.css);
 
 @import url(../blocks/cover/__text/cover__text.css);
 
@@ -101,7 +96,3 @@
 @import url(../blocks/footer/__author/footer__author.css);
 
 @import url(../blocks/footer/__link/footer__link.css);
-
-.link-hover:hover {
-    opacity: 0.8;
-}
