--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,4 +1,12 @@
-.cover__link {
-    text-decoration: none;
+.cover__link { 
+    text-decoration: none; 
     color: #fff;
+    grid-row: 1 / 2;
+    grid-column: 1;
+    background-color: rgba(42, 44, 47, 0.3);
+    z-index: 1;
+} 
+
+.cover__link:hover {
+    background-color: rgba(42, 44, 47, 0.8);
 }
