--- a/blocks/cover/__text/cover__text.css
+++ b/blocks/cover/__text/cover__text.css
@@ -1,12 +1,10 @@
-.cover__text {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+.cover__text { 
+    display: flex; 
+    flex-direction: column; 
+    align-items: center; 
+    justify-content: center; 
     height: 100%;
-    background-color: rgba(42, 44, 47, 0.3);
-}
-
-.cover__text:hover {
-    background-color: rgba(42, 44, 47, 0.8);
-}
+    grid-column: 1; 
+    grid-row: 1 / 2; 
+    z-index: 1; 
+} 
