--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,5 +1,12 @@
 .intro__text {
-    margin: 40px 0 0;
+    margin: 40px 0 auto 0;
     font-size: 16px;
     line-height: 163%;
+    max-width: 690px;
+}
+
+@media (max-width: 850px) and (min-width: 630px) {
+    .intro__text {
+        max-width: 720px;
+    }
 }
