--- a/pages/index.css
+++ b/pages/index.css
@@ -1,14 +1,18 @@
-/*Импорт шрифтов*/
-
-@import url(../fonts/inter/inter.css);
-
 /*Импорт normalize.css*/
 
 @import url(../vendor/normalize.css);
 
+/*Импорт шрифтов*/
+
+@import url(../fonts/inter/inter.css);
+
 /*Импорт блока root*/
 
 @import url(../blocks/root/root.css);
+
+/*Импорт блока link-hover*/
+
+@import url(../blocks/link-hover/link-hover.css);
 
 /*Импорт блока header*/
 
@@ -35,10 +39,6 @@
 @import url(../blocks/lead/__subtitle/lead__subtitle.css);
 
 @import url(../blocks/lead/__title/lead__title.css);
-
-/*Импорт блока align-intro*/
-
-@import url(../blocks/align-intro/align-intro.css);
 
 /*Импорт блока intro*/
 
@@ -80,8 +80,9 @@
 
 @import url(../blocks/cover/cover.css);
 
-@import url(../blocks/cover/__link/cover__link.css);
+@import url(../blocks/cover/__background/cover_background.css);
 
+@import url(../blocks/cover/__link/cover__link.css);
 
 @import url(../blocks/cover/__text/cover__text.css);
 
@@ -96,3 +97,5 @@
 @import url(../blocks/footer/__author/footer__author.css);
 
 @import url(../blocks/footer/__link/footer__link.css);
+
+@import url(../blocks/footer/__nav/footer__nav.css);
