--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -4,3 +4,13 @@
     text-decoration: none;
     color: #fff;
 }
+
+/*На ревью Вы указали, что ошибка в шрифте на экране 1280px, я долго смотрел на макет и не понилал в чем дело, ведь все сходится.
+Наверное Вы имели в виду разрешение 320px :)*/
+
+@media (max-width: 670px) {
+    .footer__link {
+        font-size: 24px;
+        line-height: 24px;
+    }
+}
